# llm-embed-proxy

./: .gitignore  README.md  llm-embed-proxy.service  pyproject.toml
llm_embed_proxy/: __init__.py  cli.py  script.py
llm_embed_proxy/templates/: base.html  index.html  search_form.html  search_results.html
